[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/entities/units/squad/infantry_squad.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.02
bottom_radius = 0.02
height = 0.08
radial_segments = 6
rings = 0

[node name="squad" type="Spatial"]
script = ExtResource( 1 )

[node name="decoration_icon" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="decoration_icon"]
cast_shadow = 0
mesh = SubResource( 1 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="MeshInstance2" type="MeshInstance" parent="decoration_icon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0, -0.05 )
cast_shadow = 0
mesh = SubResource( 1 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="MeshInstance4" type="MeshInstance" parent="decoration_icon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0, 0.05 )
cast_shadow = 0
mesh = SubResource( 1 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="MeshInstance5" type="MeshInstance" parent="decoration_icon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0, 0.05 )
cast_shadow = 0
mesh = SubResource( 1 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="MeshInstance3" type="MeshInstance" parent="decoration_icon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0, -0.05 )
cast_shadow = 0
mesh = SubResource( 1 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[connection signal="on_finish_travel" from="." to="." method="_on_squad_on_finish_travel"]
